--- a/octoprint_shutdownprinter/static/css/shutdownprinter.css
+++ b/octoprint_shutdownprinter/static/css/shutdownprinter.css
@@ -17,13 +17,13 @@
     display: block;
     height: 50px;
     line-height: 50px;
-	background:#333;
+    background:#333;
     padding-left: 50px;
 }
 
 #touch body #sidebar_plugin_shutdownprinter > label > input[type="checkbox"] {
-    display: block;
-    height: 44px;
+    position: relative;
+    top: 15px;
 }
 
 #touch body #sidebar_plugin_shutdownprinter {
