--- a/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
+++ b/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
@@ -38,7 +38,7 @@
             </label>
         </div>
     </div>
-	<h4>Temperature target</h4>
+	<h4>Nozzle temperature target</h4>
 	<div class="control-group">
         <div class="controls">
             <label class="checkbox">
