--- a/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
+++ b/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
@@ -47,9 +47,12 @@
         </div>
     </div>
 	<div class="control-group">
-		<label class="control-label">{{ _('Temperature in Celsius') }}</label>
-		<div class="controls">
-			<input type="number" min='0' class="input-block-level" data-bind="value: settings.plugins.shutdownprinter.temperatureValue">
-		</div>
-	</div>
+        <label class="control-label">{{ _('Temperature') }}</label>
+        <div class="controls">
+            <div class="input-append">
+                <input type="number" min='0' class="input-mini text-right" data-bind="value: settings.plugins.shutdownprinter.temperatureValue">
+                <span class="add-on">°C</span>
+            </div>
+        </div>
+    </div>
 </form>
