--- a/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
+++ b/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
@@ -2,7 +2,7 @@
 
     <h4>General</h4>
 	<div class="control-group">
-        <label class="control-label">{{ _('TPLINK IP') }}</label>
+        <label class="control-label">{{ _('IP') }}</label>
         <div class="controls">
             <input type="text" class="input-block-level" data-bind="value: settings.plugins.shutdownprinter.url">
         </div>
