--- a/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
+++ b/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
@@ -1,13 +1,64 @@
 <form class="form-horizontal">
-
-    <h4>General</h4>
+	<h4>General</h4>
+	<hr>
+    <h5>Mode GCODE</h5>
+		<div class="control-group">
+			<div class="controls">
+				<label class="checkbox">
+				<input type="checkbox"  id="shutdownprinter_mode_shutdown_gcode" data-bind="checked: settings.plugins.shutdownprinter._mode_shutdown_gcode">activate this mode
+				</label>
+			</div>
+		</div>
 	<div class="control-group">
         <label class="control-label">{{ _('Parameter (IP or other)') }}</label>
         <div class="controls">
             <input type="text" class="input-block-level" data-bind="value: settings.plugins.shutdownprinter.url">
         </div>
     </div>
-    <div class="control-group">
+	<hr>
+	<h5>Mode API</h5>
+	<div class="control-group">
+		<div class="controls">
+			<label class="checkbox">
+			<input type="checkbox" id="shutdownprinter_mode_shutdown_api" data-bind="checked: settings.plugins.shutdownprinter._mode_shutdown_api">activate this mode
+			</label>
+		</div>
+	</div>
+	<div class="control-group">
+		<label class="control-label">{{ _('api key (key octoprint)') }}</label>
+		<div class="controls">
+			<div class="input-append">
+				<input type="text"  class="input" data-bind="value: settings.plugins.shutdownprinter.api_key_plugin">
+		   
+			</div>
+		</div>
+	</div>
+	<div class="control-group">
+		<label class="control-label">{{ _('Plugin ID') }}</label>
+		<div class="controls">
+			<div class="input-append">
+				<input type="text"  class="input" data-bind="value: settings.plugins.shutdownprinter.api_plugin_name">
+		   
+			</div>
+		</div>
+	</div>
+	<div class="control-group">
+        <label class="control-label">{{ _('Port') }}</label>
+        <div class="controls">
+            <div class="input-append">
+			<input type="number" min='0' class="input-mini text-right" data-bind="value: settings.plugins.shutdownprinter.api_plugin_port">
+            </div>
+        </div>
+    </div>
+	<div class="control-group">
+        <label class="control-label">JSON</label>
+        <div class="controls">
+            <textarea rows="4" class="block" data-bind="value: settings.plugins.shutdownprinter.api_json_command"></textarea>
+        </div>
+    </div>
+	<hr>
+	<h5>Common options</h5>
+	<div class="control-group">
         <label class="control-label">Abort Timeout</label>
         <div class="controls">
             <div class="input-append">
@@ -23,6 +74,7 @@
             </label>
         </div>
     </div>
+	<hr>
 	  <h4>Events catch</h4>
 	<div class="control-group">
         <div class="controls">
@@ -38,6 +90,7 @@
             </label>
         </div>
     </div>
+	<hr>
 	<h4>Nozzle temperature target</h4>
 	<div class="control-group">
         <div class="controls">
