--- a/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
+++ b/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
@@ -10,6 +10,12 @@
 			</div>
 		</div>
 	<div class="control-group">
+        <label class="control-label">{{ _('GCODE') }}</label>
+        <div class="controls">
+            <input type="text" class="input-block-level" data-bind="value: settings.plugins.shutdownprinter.gcode">
+        </div>
+    </div>
+	<div class="control-group">
         <label class="control-label">{{ _('Parameter (IP or other)') }}</label>
         <div class="controls">
             <input type="text" class="input-block-level" data-bind="value: settings.plugins.shutdownprinter.url">
