fix compatibility problem with another plugin

--- a/octoprint_shutdownprinter/templates/shutdownprinter_sidebar.jinja2
+++ b/octoprint_shutdownprinter/templates/shutdownprinter_sidebar.jinja2
@@ -1,4 +1,4 @@
-<div id="sidebar_plugin_shutdownprinter" class="input-group">
+<div class="sidebar_plugin_shutdownprinter">
 	<label class="checkbox">
 		<input type="checkbox" data-bind="enable: loginState.isUser(), checked: shutdownprinterEnabled">
 		{{ _('Shutdown Printer after print finishes') }}
