add extra command

--- a/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
+++ b/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
@@ -158,6 +158,14 @@
             </label>
         </div>
     </div>
+	<h4>Extra command/script</h4>
+	<div class="control-group">
+        <div class="controls">
+            <label class="checkbox">
+            <input type="text"  class="input" data-bind="value: settings.plugins.shutdownprinter.extraCommand">
+            </label>
+        </div>
+    </div>
 	<div class="control-group">
         <label class="control-label">{{ _('Temperature') }}</label>
         <div class="controls">
