Added PUT to api_custom method

--- a/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
+++ b/octoprint_shutdownprinter/templates/shutdownprinter_settings.jinja2
@@ -90,6 +90,9 @@
 			<label class="checkbox">
 			<input type="checkbox"  id="shutdownprinter_api_custom_POST" data-bind="checked: settings.plugins.shutdownprinter.api_custom_POST">POST
 			</label>
+            <label class="checkbox">
+			<input type="checkbox"  id="shutdownprinter_api_custom_PUT" data-bind="checked: settings.plugins.shutdownprinter.api_custom_PUT">PUT
+			</label>
 		</div>
 	</div>
 	<div class="control-group">
